# onedrive_rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/api/: albums.rs  drive.rs  mod.rs  photos.rs
src/authentication/callback/: server.rs
src/authentication/oauth2/: wrapper.rs
