[package]
name = "onedrive_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
http-body-util = "*"
hyper-util = { version = "*", features = ["full"] }
async-channel = "2.5.0"
rand = "0.9.2"
open = "5.3.3"
base64 = "0.22.1"
sha2 = "0.10.9"
reqwest = { version ="0.13.1", features = ["form", "stream"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.31"
urlencoding = "2.1.3"
chrono = "0.4.45"
